// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for theme: dark 1`] = `
":host {
  scroll-margin-block-start: calc(max(2px, var(--p-internal-select-option-scaling, 1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--p-internal-select-option-scaling, 1) * 6px) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(img) {
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  width: auto !important;
  height: calc(6px + 2.125ex) !important;
  border-radius: 4px !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.option {
  display: flex;
  gap: max(4px, var(--p-internal-select-option-scaling, 1) * 12px);
  padding-block: max(2px, var(--p-internal-select-option-scaling, 1) * 8px);
  padding-inline: max(4px, var(--p-internal-select-option-scaling, 1) * var(--p-internal-select-option-padding-left, 12px)) max(4px, var(--p-internal-select-option-scaling, 1) * 12px);
  min-height: calc(6px + 2.125ex);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #AFB0B3;
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=option] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: rgba(148, 149, 152, .18);
}
.option--highlighted {
  background: #404044;
}
.option--highlighted, .option--selected {
  color: #FBFCFF;
}
.option--disabled {
  cursor: not-allowed;
  color: #7E7F82;
}
.option--hidden {
  display: none;
}
.icon {
  margin-inline-start: auto;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #FBFCFF;
    background: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for theme: light 1`] = `
":host {
  scroll-margin-block-start: calc(max(2px, var(--p-internal-select-option-scaling, 1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--p-internal-select-option-scaling, 1) * 6px) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(img) {
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  width: auto !important;
  height: calc(6px + 2.125ex) !important;
  border-radius: 4px !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.option {
  display: flex;
  gap: max(4px, var(--p-internal-select-option-scaling, 1) * 12px);
  padding-block: max(2px, var(--p-internal-select-option-scaling, 1) * 8px);
  padding-inline: max(4px, var(--p-internal-select-option-scaling, 1) * var(--p-internal-select-option-padding-left, 12px)) max(4px, var(--p-internal-select-option-scaling, 1) * 12px);
  min-height: calc(6px + 2.125ex);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=option] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: rgba(148, 149, 152, .18);
}
.option--highlighted {
  background: #D8D8DB;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.icon {
  margin-inline-start: auto;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: rgba(148, 149, 152, .18);
  }
}
"
`;
